# clearml-cifar

./: Dockerfile  Dockerfile.bkp  pyproject.toml
